# cardputer-zero-shell

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  uninstall.sh
applications/: app-store.desktop  files.desktop  hdmi.desktop  settings.desktop  system-monitor.desktop  terminal.desktop
docker/: Dockerfile.arm64
docs/: application-contract.md  development.md  install.md  intent.md  relationship-to-os.md  runtime.md  spec.md  user-guide.md  wayland-task-model.md
main/include/zero_shell/: app_catalog.hpp  framebuffer_canvas.hpp  input_device.hpp  process_runner.hpp  pty_terminal.hpp  shell_ui.hpp  status.hpp
main/src/: app_catalog.cpp  framebuffer_canvas.cpp  input_device.cpp  main.cpp  process_runner.cpp  pty_terminal.cpp  shell_ui.cpp  status.cpp  zero_shell_wayland.cpp
scripts/: app-store-fallback.sh  docker-build-arm64.sh  files-fallback.sh  hdmi-menu.sh  monitor-fallback.sh  settings-fallback.sh
